--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node dist/index.js",
-    "build": "npx tsc",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.0.5",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "express": "^4.18.1",
-    "nodemon": "^2.0.19"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node dist/index.js",
+        "build": "npx tsc",
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/express": "^4.17.13",
+        "@types/node": "^18.0.5",
+        "prettier": "2.7.1",
+        "typescript": "^4.7.4"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "body-parser": "^1.20.0",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "nodemon": "^2.0.19",
+        "pg": "^8.7.3",
+        "reflect-metadata": "^0.1.13",
+        "ts-node": "^10.9.1",
+        "typeorm": "^0.3.7"
+    }
 }
