--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
         "@types/node": "^18.0.5",
         "prettier": "2.7.1",
