--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,16 @@
         "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
         "@types/node": "^18.0.5",
+        "@typescript-eslint/eslint-plugin": "^5.33.0",
+        "@typescript-eslint/parser": "^5.33.0",
+        "eslint": "^8.21.0",
         "prettier": "2.7.1",
         "typescript": "^4.7.4"
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
+        "concurrently": "^7.3.0",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "nodemon": "^2.0.19",
