--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/node": "^18.0.5",
         "@typescript-eslint/eslint-plugin": "^5.33.0",
@@ -25,6 +26,7 @@
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
         "concurrently": "^7.3.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "nodemon": "^2.0.19",
